<resources>
    <string name="app_name">SpliteBill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUp">SignUp</string>
    <string name="login">login</string>
    <string name="account">Account:</string>
    <string name="password">Password:</string>
    <string name="loginToSignUp">Do not have an account? Sign up!</string>
    <string name="signupToLogin">Already have an account? Log in!</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_message">Send message</string>
    <string name="add_a_new_event">Add a new event</string>
    <string name="event_name">Event Name:</string>
    <string name="event_description">Event description:</string>
    <string name="total_amount">Total amount:</string>
    <string name="submit">Submit</string>
    <string name="number_of_people">Number of people:</string>
    <string name="pay_this_event">Pay this event</string>
    <string name="sign_out">Sign out</string>
    <string name="pay_with_credit_card">Pay with credit card</string>
    <string name="decline_this_event">Decline this event</string>
</resources>