<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EventPaymentActivity">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:padding="5dp"

        android:text="@string/event_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/nameEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/item_event_background"
        android:padding="5dp"

        android:textSize="12sp"
        tools:text="name Event" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:padding="5dp"

        android:text="@string/event_description"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/descriptionEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="6dp"
        android:background="@drawable/item_event_background"
        android:padding="5dp"
        android:textSize="12sp"
        tools:text="name Evendfdfdfdfdfdfdfdfdtname Evendfdfdfdfdfdfdfdfdtname Evendfdfdfdfdfdfdfdfdtname Evendfdfdfdfdfdfdfdfdtname Evendfdfdfdfdfdfdfdfdt" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:padding="5dp"

        android:text="@string/total_amount"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/eventAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/item_event_background"
        android:padding="5dp"

        android:textSize="12sp"
        tools:text="name Event" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:padding="5dp"

        android:text="@string/number_of_people"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/peopleNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/item_event_background"
        android:padding="5dp"

        android:textSize="12sp"
        tools:text="name Event" />

</LinearLayout>